# corporate-credit-risk-platform

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  secret-scan.yml
docs/: architecture.md  data-contracts.md  data-dictionary.md  financial-methodology.md  product-requirements.md  risk-model.md
docs/plans/: 2026-07-23-microsoft-annual-fact-selection-policy.md
src/credit_risk_platform/: __init__.py
src/credit_risk_platform/config/: __init__.py  settings.py
src/credit_risk_platform/providers/: __init__.py  http.py  rate_limit.py  retry.py  urllib_transport.py
src/credit_risk_platform/providers/sec/: __init__.py  client.py  company_facts_adapter.py  company_facts_models.py  company_facts_parser.py  errors.py  models.py  raw_artifact.py  request_builder.py  response_mapper.py  ticker_mapping.py  ticker_mapping_adapter.py
tests/: test_package_import.py
tests/config/: test_settings.py
tests/providers/: test_http.py  test_rate_limit.py  test_retry.py  test_urllib_transport.py
tests/providers/sec/: test_client.py  test_company_facts_adapter.py  test_company_facts_models.py  test_company_facts_parser.py  test_errors.py  test_models.py  test_raw_artifact.py  test_request_builder.py  test_response_mapper.py  test_ticker_mapping.py  test_ticker_mapping_adapter.py
